# fudo

./: .gitignore  pyproject.toml
configs/: data_contract.yaml  dataset_schema.yaml  validate_contract.py
notebooks/: 01_data_ingestion.ipynb  02_data_quality.ipynb  03_eda.ipynb  04_engine_dtype_inference.ipynb
reports/: revision_datos_transaccionales.tex
src/fudo/eda/: profiling.py  visualizations.py
src/fudo/ingestion/: loaders.py
src/fudo/quality/: checks.py
src/fudo/utils/: io.py
